--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@types/styled-components-react-native": "^5.2.1",
     "expo": "~48.0.6",
+    "expo-checkbox": "^2.3.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
